fix: login password input letter spacing

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -80,6 +80,7 @@ input {
   border: 2px solid #303030;
   border-radius: 8px;
   padding: 10px;
+  font-size: 18px;
 }
 
 button {
